fix: spacing for AlertContainer and move style utils to app

--- a/public/main.scss
+++ b/public/main.scss
@@ -1,17 +1,3 @@
 .suffix-neg-margin-left {
 	margin-left: -12px;
 }
-
-// TODO: move to redactie_app styles
-.flex-no-wrap {
-	flex-wrap: nowrap;
-}
-
-.flex-align-self-center {
-	align-self: center;
-}
-
-.u-no-padding-y {
-	padding-top: 0 !important;
-	padding-bottom: 0 !important;
-}
